<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>sliderControlWidget</class>
 <widget class="QWidget" name="sliderControlWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>710</width>
    <height>50</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <widget class="bSlider" name="speedSlider">
   <property name="geometry">
    <rect>
     <x>16</x>
     <y>22</y>
     <width>612</width>
     <height>30</height>
    </rect>
   </property>
   <property name="minimum">
    <number>-100</number>
   </property>
   <property name="maximum">
    <number>100</number>
   </property>
   <property name="orientation">
    <enum>Qt::Horizontal</enum>
   </property>
  </widget>
  <widget class="bSlider" name="positionSlider">
   <property name="geometry">
    <rect>
     <x>8</x>
     <y>3</y>
     <width>630</width>
     <height>20</height>
    </rect>
   </property>
   <property name="maximum">
    <number>1000</number>
   </property>
   <property name="value">
    <number>200</number>
   </property>
   <property name="orientation">
    <enum>Qt::Horizontal</enum>
   </property>
   <property name="invertedAppearance">
    <bool>false</bool>
   </property>
   <property name="invertedControls">
    <bool>false</bool>
   </property>
   <property name="tickPosition">
    <enum>QSlider::TicksAbove</enum>
   </property>
   <property name="tickInterval">
    <number>45</number>
   </property>
  </widget>
  <widget class="QLabel" name="coordLabel">
   <property name="geometry">
    <rect>
     <x>653</x>
     <y>12</y>
     <width>60</width>
     <height>30</height>
    </rect>
   </property>
   <property name="font">
    <font>
     <family>Helvetica</family>
     <pointsize>14</pointsize>
    </font>
   </property>
   <property name="text">
    <string>234</string>
   </property>
  </widget>
 </widget>
 <customwidgets>
  <customwidget>
   <class>bSlider</class>
   <extends>QSlider</extends>
   <header location="global">bslider.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
 <designerdata>
  <property name="gridDeltaX">
   <number>10</number>
  </property>
  <property name="gridDeltaY">
   <number>10</number>
  </property>
  <property name="gridSnapX">
   <bool>false</bool>
  </property>
  <property name="gridSnapY">
   <bool>false</bool>
  </property>
  <property name="gridVisible">
   <bool>false</bool>
  </property>
 </designerdata>
</ui>
